--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = "https://beccas-porfolio.vercel.app/"
 languageCode = "en-us"
 theme = "dream"
-title = "beccas blog"
+title = "beccas's portfolio"
