--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://beccas-porfolio.vercel.app/"
+baseURL = "https://beccas-portfolio.vercel.app/"
 languageCode = "en-us"
 theme = "dream"
 title = "becca's portfolio"
